[#657] Properly configure surefire for JDK 11-20 and for 21+